--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/rent
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=validate
 
+path.to.personalData.storage=src/main/resources/static/personalData/
+path.to.cars.photos.storage=src/main/resources/static/cars/
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=50MB
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
